--- a/cadence/Chart.yaml
+++ b/cadence/Chart.yaml
@@ -1,6 +1,6 @@
 name: cadence
-version: 0.3.3
-appVersion: 0.7.1
+version: 0.4.3-veyo
+appVersion: 0.9.5
 description: Cadence is a distributed, scalable, durable, and highly available orchestration engine to execute asynchronous long-running business logic in a scalable and resilient way.
 icon: https://raw.githubusercontent.com/uber/cadence-web/master/client/assets/logo.svg
 apiVersion: v1
@@ -14,3 +14,5 @@ keywords:
 maintainers:
   - name: Banzai Cloud
     email: info@banzaicloud.com
+  - name: Veyo Architecture
+    email: architecture@veyo.com
